syntax = "proto3";

package chat;

// Définition d'une énumération pour représenter le statut d'un utilisateur
enum UserStatus {
    UNKNOWN = 0;  // Statut inconnu (valeur par défaut)
    ACTIVE = 1;   // Utilisateur actif
    INACTIVE = 2; // Utilisateur inactif
}

// Message représentant un utilisateur
message User {
    string id = 1;
    string name = 2;
    string email = 3;
    UserStatus status = 4;
}

// Message représentant un message de chat
message ChatMessage {
    string id = 1;
    string room_id = 2;
    string sender_id = 3;
    string content = 4;
}

// Message de requête pour récupérer un utilisateur
message GetUserRequest {
    string user_id = 1;
}

// Message de réponse contenant les informations d'un utilisateur
message GetUserResponse {
    User user = 1;
}

// Message utilisé pour le streaming de chat
message ChatStream {
    oneof payload {
        ChatMessage chat_message = 1;
    }
}

// Nouveau message pour récupérer l'historique des messages
message GetChatHistoryRequest {
    string room_id = 1; // Identifiant de la salle dont on veut l'historique
}

message GetChatHistoryResponse {
    repeated ChatMessage messages = 1; // Liste des messages de la salle
}

// Définition du service gRPC
service ChatService {
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc Chat(stream ChatStream) returns (stream ChatStream);
    rpc GetChatHistory(GetChatHistoryRequest) returns (GetChatHistoryResponse);
}
